--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,7 @@
     <string name="app_name">ReadyToGo</string>
     <string name="welcome_message">Welcome To ReadyToGo</string>
     <string name="startscreen_description">Please sign in to your ReadyToGo-account</string>
+    <string name="logo">Logo</string>
+    <string name="register_button">Register</string>
+    <string name="login_button">Login</string>
 </resources>
