--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="logo">Logo</string>
     <string name="register_button">Register</string>
     <string name="login_button">Login</string>
+    <string name="startscreen_info">A Project By CW2B2</string>
 </resources>
