Maps activity added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,4 +20,5 @@
         completions."
     </string>
     <string name="loginscreen_message">Sign in to your account</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
