--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="name">Username</string>
     <string name="first_name">First Name</string>
     <string name="last_name">Last Name</string>
+    <string name="register_title">Create Your ReadyToGo Account</string>
 </resources>
