--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,5 +31,9 @@
     <string name="meters">m</string>
     <string name="address">Address:</string>
     <string name="rent">Click here to rent this bike</string>
+    <string name="unlock">Unlock</string>
+    <string name="map">Map</string>
+    <string name="lock_unlock">Toggle Lock</string>
+    <string name="end_contract">End Contract</string>
 
 </resources>
