--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -37,6 +37,7 @@
     <string name="end_contract">End Contract</string>
     <string name="end_contract_info">Approach NFC module to end your contract</string>
     <string name="unlock_info">Approach NFC module to toggle the bike lock</string>
+    <string name="signout">Sign Out</string>
 
 
 </resources>
