--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -35,8 +35,8 @@
     <string name="map">Map</string>
     <string name="lock_unlock">Toggle Lock</string>
     <string name="end_contract">End Contract</string>
-    <string name="end_contract_info">Approach NFC module to end your contract</string>
-    <string name="unlock_info">Approach NFC module to toggle the bike lock</string>
+    <string name="end_contract_info">Approach NFC module\nto end your contract</string>
+    <string name="unlock_info">Approach NFC module\nto toggle the bike lock</string>
     <string name="signout">Sign Out</string>
     <string name="not_renting">You\'re not renting a bike!</string>
     <string name="toggle_toggle">Toggle Lock</string>
